#53855 - Fix button on firefox (#199)

--- a/src/atoms/button/Button.scss
+++ b/src/atoms/button/Button.scss
@@ -36,6 +36,7 @@ $button__width--fluid               : 100% !default;
 
 .a-button {
   display: inline-flex;
+  align-items: center;
   justify-content: center;
   min-width: $button__width;
   height: $button__height;
